--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,38 +16,5 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.periodic.balancing'
+      - '/bin/sleep 10 && python tasks/periodic/balancing.py'
 
-  get_orders_results:
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "5m"
-    build:
-      context: .
-      dockerfile: "Dockerfile.workers"
-    env_file:
-      - .env
-    restart: always
-    command:
-      - '/bin/sh'
-      - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.event_${GLOBAL_SYMBOL}.get_orders_results'
-
-  producer:
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "5m"
-    build:
-      context: .
-      dockerfile: "Dockerfile.workers"
-    env_file:
-      - .env
-    restart: always
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    command:
-      - '/bin/sh'
-      - '-c'
-      - '/bin/sleep 10 && python producer.py'
