--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,3 +34,35 @@ services:
       - '-c'
       - '/bin/sleep 10 && python tasks/periodic/balancing.py'
 
+  get_orders_results_eth:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+    build:
+      context: .
+      dockerfile: "Dockerfile.workers"
+    env_file:
+      - .env.eth
+    restart: always
+    command:
+      - '/bin/sh'
+      - '-c'
+      - '/bin/sleep 10 && python consumer.py -q logger.event_${GLOBAL_SYMBOL}.get_orders_results'
+
+  get_orders_results_btc:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+    build:
+      context: .
+      dockerfile: "Dockerfile.workers"
+    env_file:
+      - .env.btc
+    restart: always
+    command:
+      - '/bin/sh'
+      - '-c'
+      - '/bin/sleep 10 && python consumer.py -q logger.event_${GLOBAL_SYMBOL}.get_orders_results'
+
