--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,3 +82,18 @@ services:
       - '-c'
       - '/bin/sleep 10 && python consumer.py -q logger.event.check_balance'
 
+  Funding:
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+    build:
+      context: .
+      dockerfile: "dockerfile.workers"
+    env_file:
+      - .env.eth
+    restart: always
+    command:
+      - '/bin/sh'
+      - '-c'
+      - '/bin/sleep 10 && python consumer.py -q logger.periodic.funding'
