--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python tasks/periodic/balancing.py'
+      - '/bin/sleep 10 && python3 tasks/periodic/balancing.py'
 
 #  balancing_btc:
 #    logging:
@@ -48,7 +48,7 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.event.get_orders_results'
+      - '/bin/sleep 10 && python3 consumer.py -q logger.event.get_orders_results'
 
   balance_check:
     logging:
@@ -64,7 +64,7 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.event.check_balance'
+      - '/bin/sleep 10 && python3 consumer.py -q logger.event.check_balance'
 
   funding:
     logging:
@@ -80,23 +80,23 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.periodic.funding'
+      - '/bin/sleep 10 && python3 consumer.py -q logger.periodic.funding'
 
-  missed_orders:
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "100m"
-    build:
-      context: .
-      dockerfile: "dockerfile.workers"
-    env_file:
-      - .env.eth
-    restart: always
-    command:
-      - '/bin/sh'
-      - '-c'
-      - '/bin/sleep 10 && python consumer.py -q logger.periodic.get_missed_orders'
+#  missed_orders:
+#    logging:
+#      driver: "json-file"
+#      options:
+#        max-size: "100m"
+#    build:
+#      context: .
+#      dockerfile: "dockerfile.workers"
+#    env_file:
+#      - .env.eth
+#    restart: always
+#    command:
+#      - '/bin/sh'
+#      - '-c'
+#      - '/bin/sleep 10 && python consumer.py -q logger.periodic.get_missed_orders'
 
   producer:
     logging:
@@ -114,4 +114,4 @@ services:
     command:
       - '/bin/sh'
       - '-c'
-      - '/bin/sleep 10 && python producer.py'
+      - '/bin/sleep 10 && python3 producer.py'
