--- a/eth_config.ini
+++ b/eth_config.ini
@@ -11,6 +11,7 @@ STOP_PERCENT = 0.5
 GLOBAL_SYMBOL = ETH
 MIN_DISBALANCE = 100
 TIMEOUT = 180
+QUEUES = logger.event.get_orders_results,logger.event.check_balance
 
 [POSTGRES]
 NAME = postgrs
