Исправил циклическую зависимость

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,8 @@ HOST = 10.0.0.26
 PORT = 5432
 
 [RABBIT]
-HOST = 10.0.0.26
+# HOST = 10.0.0.26
+HOST = 18.178.119.207
 PORT = 5672
 USERNAME = supauser
 PASSWORD = XClO8wNcv9stGmfCO7
