Удалил лишнюю папку tools

--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,6 @@ LIMIT_SHIFTS = 1.0005
 LEVERAGE = 3.5
 EXCHANGES = DYDX,APOLLOX,BINANCE,KRAKEN
 STOP_PERCENT = 0.5
-GLOBAL_SYMBOL = ETH
 MIN_DISBALANCE = 20
 TIMEOUT = 180
 QUEUES = logger.event.get_orders_results,logger.event.check_balance
@@ -17,23 +16,25 @@ QUEUES = logger.event.get_orders_results,logger.event.check_balance
 NAME = postgrs
 USER = postgrs
 PASSWORD = 7854pfYhostgaAergrrs132
-HOST = 10.0.0.26
+#HOST = 10.0.12.237
+HOST = 52.192.198.207
 PORT = 5432
 
 [RABBIT]
-# HOST = 10.0.0.26
-HOST = 18.178.119.207
+#HOST = 10.0.12.237
+HOST = 52.192.198.207
 PORT = 5672
 USERNAME = supauser
 PASSWORD = XClO8wNcv9stGmfCO7
 
 [TELEGRAM]
+TG_DEBUG = 1
 TOKEN = 6037890725:AAHSKzK9aazvOYU2AiBSDO8ZLE5bJaBNrBw
 CHAT_ID = -807300930
 ALERT_CHAT_ID = -1001469726641
 ALERT_BOT_TOKEN = 1727721554:AAH9-L08vcAI5NFv-zkxckxjpLbhLqKH7b4
-DEBUG_CHAT_ID = -4073293077 #Dima private
-DEBUG_BOT_TOKEN = 6684267405:AAFf2z4yVXtW-afd3kM7vAfNkNipCJBAZbw #Dima private
+DIMA_DEBUG_CHAT_ID = -4073293077
+DIMA_DEBUG_BOT_TOKEN = 6684267405:AAFf2z4yVXtW-afd3kM7vAfNkNipCJBAZbw
 DAILY_CHAT_ID = -716077505
 INV_CHAT_ID = -792012135
 CUSTOM_CHAT_ID = -807300930
